# bank-sms-parsing

./: .env.example  .env.full.example  .gitignore  Dockerfile.sms-parser-api  MODEL_CARD.md  README.md  TODO.md  docker-compose.dockerhub.yml  docker-compose.full.yml  docker-compose.yml  find_min_filter_words.py  pyproject.toml
.github/workflows/: docker-publish.yml
dataset-creation/: README.md  classify_transactions.py  filter_sms.py  select_best_output.py
dataset-creation/input/: dummy-non-transaction-messages.csv  dummy-transaction-messages.csv
dataset-creation/output/: dummy-transaction-messages.output.jsonl
dataset-creation/source-sms/: dummy-messages.json
finetune-functiongemma/: README.md  evaluate.py  inference.py  merge_lora.py  prepare_data.py  train.py
models/: .gitkeep
sms-parser-api/: .dockerignore  .env.example  README.md  __init__.py  config.py  main.py  models.py  test_api.py
sms-parser-api/clients/: __init__.py  actual_budget.py
sms-parser-api/db/: __init__.py  models.py  session.py
sms-parser-api/llm/: __init__.py  parser.py  prompts.py
